deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: avocado
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avocado-client
            port:
              number: 80      
      - path: /api/merchandise
        pathType: Prefix
        backend:
          service:
            name: avocado-product
            port:
              number: 80
      - path: /api/member
        pathType: Prefix
        backend:
          service:
            name: avocado-member
            port:
              number: 80              
      - path: /api/search
        pathType: Prefix
        backend:
          service:
            name: avocado-search
            port:
              number: 80                            
      - path: /api/community
        pathType: Prefix
        backend:
          service:
            name: avocado-community
            port:
              number: 80         
      - path: /api/commercial
        pathType: Prefix
        backend:
          service:
            name: avocado-commercial
            port:
              number: 80
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: avocado-payment
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: avocado
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:    
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80    
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#   name: headless-default-to-argocd
#   namespace: default
# spec:
#   clusterIP: None
#   externalName: argocd-server.argocd.svc.cluster.local # reference svc-C in ns-B
